error.txt
[ 11%] Building C object CMakeFiles/main.dir/BOOK_MANAGMENT.c.o
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c: In function \u2018load_books\u2019:
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:32:2: error: \u2018for\u2019 loop initial declarations are only allowed in C99 mode
  for (int i = 0; i < MAX_NUM_BOOK; i++)
  ^
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:32:2: note: use option -std=c99 or -std=gnu99 to compile your code
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c: In function \u2018find_book_by_year\u2019:
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:198:4: warning: passing argument 2 of \u2018strcpy\u2019 makes pointer from integer without a cast [enabled by default]
    strcpy(result.array[id].authors, strlen(book_list.array[i].authors), book_list.array[i].authors);
    ^
In file included from /home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:3:0:
/usr/include/string.h:125:14: note: expected \u2018const char * __restrict__\u2019 but argument is of type \u2018size_t\u2019
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:198:4: error: too many arguments to function \u2018strcpy\u2019
    strcpy(result.array[id].authors, strlen(book_list.array[i].authors), book_list.array[i].authors);
    ^
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:199:4: warning: passing argument 2 of \u2018strcpy\u2019 makes pointer from integer without a cast [enabled by default]
    strcpy(result.array[id].title, strlen(book_list.array[i].title), book_list.array[i].title);
    ^
In file included from /home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:3:0:
/usr/include/string.h:125:14: note: expected \u2018const char * __restrict__\u2019 but argument is of type \u2018size_t\u2019
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
/home/cserv1_a/soc_ug/fy18z3w/Desktop/hw/tmp/cw1_before/BOOK_MANAGMENT.c:199:4: error: too many arguments to function \u2018strcpy\u2019
    strcpy(result.array[id].title, strlen(book_list.array[i].title), book_list.array[i].title);
    ^
make[2]: *** [CMakeFiles/main.dir/BOOK_MANAGMENT.c.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2